fix(Registration): fixed the footer and companyName (#20)

--- a/src/mailing/Mailing.Template/EmailTemplates/additional_user_invitation.html
+++ b/src/mailing/Mailing.Template/EmailTemplates/additional_user_invitation.html
@@ -194,7 +194,7 @@
               <span style="color: #d31184">{nameCreatedBy}</span> has already started the registration of <span
                 style="color: #d31184">{companyName}</span> to Cofinity-X. The registration itself
               is needed to participate in the network and to get an active participant. You can join the registration
-              form by clicking the Button "Join Now" below.
+              form by clicking the Button “Join Now” below.
             </p>
             <p style="
                   font-family: 'Karbon', helvetica, sans-serif;
@@ -227,7 +227,7 @@
                     color: #000;
                   ">
                 1st: Select your company tenant. Your company tenant is
-                <span style="color: #d31184">"{companyName}"</span>
+               <br/> <span style="color: #d31184">“{companyName}”</span>
               </li>
 
               <li style="
@@ -337,7 +337,7 @@
                             More information and help:
                         </p>
                         <p style="
-                        font-family: 'Karbon';
+                        font-family: 'Karbon', helvetica, sans-serif;
                         margin: 0;
                         text-decoration: none;
                         font-size: 16px;
@@ -352,7 +352,7 @@
                           color: #2484C6;
                           font-weight: 400;
                           text-decoration: underline;
-                          font-family: 'Karbon';
+                          font-family: 'Karbon', helvetica, sans-serif;
                         ">support@cofinity-x.com</a>
                             or have a look at our <a
                                 href="https://intercom-help.eu/cofinity-x/en/collections/323675-portal-marketplace"
@@ -360,7 +360,7 @@
                      color: #2484C6;
                      font-weight: 400;
                      text-decoration: underline;
-                     font-family: 'Karbon';
+                     font-family: 'Karbon', helvetica, sans-serif;
                    ">Help Documentation</a>.
                         </p>
                     </td>
@@ -406,13 +406,13 @@
                 50668 Köln <br />
                 E-Mail: <a href="mailto:info@cofinity-x.com" style="
                 color: black;
-                font-weight: 500;
+                font-weight: bold;
                 text-decoration: underline;
                 font-family: 'Karbon', helvetica, sans-serif;
               ">info@cofinity-x.com</a> <br />
                 Website: <a href="https://www.cofinity-x.com" style="
                 color: black;
-                font-weight: 500;
+                font-weight: bold;
                 text-decoration: underline;
                 font-family: 'Karbon', helvetica, sans-serif;
               " target="_blank">www.cofinity-x.com</a>
