--- a/src/mailing/Mailing.Template/EmailTemplates/osp_welcome_email.html
+++ b/src/mailing/Mailing.Template/EmailTemplates/osp_welcome_email.html
@@ -32,7 +32,7 @@
     <!--[if (mso 16)]> <![endif]-->
     <style type="text/css">
         @font-face {
-            font-family: 'Karbon';
+            font-family: 'Karbon', helvetica, sans-serif;
             src: url('karbon-semibold.woff2') format('woff2');
             font-weight: 600;
             font-style: normal;
@@ -40,7 +40,7 @@
         }
 
         @font-face {
-            font-family: 'Karbon';
+            font-family: 'Karbon', helvetica, sans-serif;
             src: url('karbon-medium-italic.woff2') format('woff2');
             font-weight: 500;
             font-style: italic;
@@ -48,7 +48,7 @@
         }
 
         @font-face {
-            font-family: 'Karbon';
+            font-family: 'Karbon', helvetica, sans-serif;
             src: url('karbon-thin.woff2') format('woff2');
             font-weight: 100;
             font-style: normal;
@@ -56,7 +56,7 @@
         }
 
         @font-face {
-            font-family: 'Karbon';
+            font-family: 'Karbon', helvetica, sans-serif;
             src: url('karbon-semibold-italic.woff2') format('woff2');
             font-weight: 600;
             font-style: italic;
@@ -64,7 +64,7 @@
         }
 
         @font-face {
-            font-family: 'Karbon';
+            font-family: 'Karbon', helvetica, sans-serif;
             src: url('karbon-medium.woff2') format('woff2');
             font-weight: 500;
             font-style: normal;
@@ -72,7 +72,7 @@
         }
 
         @font-face {
-            font-family: 'Karbon';
+            font-family: 'Karbon', helvetica, sans-serif;
             src: url('karbon-regular.woff2') format('woff2');
             font-weight: normal;
             font-style: normal;
@@ -80,7 +80,7 @@
         }
 
         @font-face {
-            font-family: 'Karbon';
+            font-family: 'Karbon', helvetica, sans-serif;
             src: url('karbon-bold-italic.woff2') format('woff2');
             font-weight: bold;
             font-style: italic;
@@ -88,7 +88,7 @@
         }
 
         @font-face {
-            font-family: 'Karbon';
+            font-family: 'Karbon', helvetica, sans-serif;
             src: url('karbon-thin-italic.woff2') format('woff2');
             font-weight: 100;
             font-style: italic;
@@ -96,7 +96,7 @@
         }
 
         @font-face {
-            font-family: 'Karbon';
+            font-family: 'Karbon', helvetica, sans-serif;
             src: url('karbon-light-italic.woff2') format('woff2');
             font-weight: 300;
             font-style: italic;
@@ -104,7 +104,7 @@
         }
 
         @font-face {
-            font-family: 'Karbon';
+            font-family: 'Karbon', helvetica, sans-serif;
             src: url('karbon-light.woff2') format('woff2');
             font-weight: 300;
             font-style: normal;
@@ -112,7 +112,7 @@
         }
 
         @font-face {
-            font-family: 'Karbon';
+            font-family: 'Karbon', helvetica, sans-serif;
             src: url('karbon-bold.woff2') format('woff2');
             font-weight: bold;
             font-style: normal;
@@ -120,7 +120,7 @@
         }
 
         @font-face {
-            font-family: 'Karbon';
+            font-family: 'Karbon', helvetica, sans-serif;
             src: url('karbon-regular-italic.woff2') format('woff2');
             font-weight: normal;
             font-style: italic;
@@ -446,7 +446,7 @@
                             More information and help:
                         </p>
                         <p style="
-                        font-family: 'Karbon';
+                        font-family: 'Karbon', helvetica, sans-serif;
                         margin: 0;
                         text-decoration: none;
                         font-size: 16px;
@@ -461,7 +461,7 @@
                           color: #2484C6;
                           font-weight: 400;
                           text-decoration: underline;
-                          font-family: 'Karbon';
+                          font-family: 'Karbon', helvetica, sans-serif;
                         ">support@cofinity-x.com</a>
                             or have a look at our <a
                                 href="https://intercom-help.eu/cofinity-x/en/collections/323675-portal-marketplace"
@@ -469,7 +469,7 @@
                      color: #2484C6;
                      font-weight: 400;
                      text-decoration: underline;
-                     font-family: 'Karbon';
+                     font-family: 'Karbon', helvetica, sans-serif;
                    ">Help Documentation</a>.
                         </p>
                     </td>
@@ -517,13 +517,13 @@
                                 50668 Köln <br />
                                 E-Mail: <a href="mailto:info@cofinity-x.com" style="
                 color: #333333;
-                font-weight: 500;
+                font-weight: bold;
                 text-decoration: underline;
                 font-family: 'Karbon', helvetica, sans-serif;
               ">info@cofinity-x.com</a> <br />
                                 Website: <a href="https://www.cofinity-x.com" style="
                 color: #333333;
-                font-weight: 500;
+                font-weight: bold;
                 text-decoration: underline;
                 font-family: 'Karbon', helvetica, sans-serif;
               " target="_blank">www.cofinity-x.com</a>
