--- a/src/mailing/Mailing.Template/EmailTemplates/password.html
+++ b/src/mailing/Mailing.Template/EmailTemplates/password.html
@@ -198,11 +198,11 @@
                             <span style="
                            color: #333;
                            margin-bottom: 40px;
-                           font-family: 'Karbon';
-                           font-size: 18px;
+                           font-family: 'Karbon', helvetica, sans-serif;
+                           font-size: 16px;
                            font-style: normal;
                            font-weight: 500;
-                           line-height: 140%;"><b>Access the login page through the "Start registration" button in
+                           line-height: 140%;"><b>Access the login page through the “Start registration” button in
                                     your invitation e-mail.</b>
                             </span>
                         </p>
@@ -251,7 +251,7 @@
                             More information and help:
                         </p>
                         <p style="
-                        font-family: 'Karbon';
+                        font-family: 'Karbon', helvetica, sans-serif;
                         margin: 0;
                         text-decoration: none;
                         font-size: 16px;
@@ -266,7 +266,7 @@
                           color: #2484C6;
                           font-weight: 400;
                           text-decoration: underline;
-                          font-family: 'Karbon';
+                          font-family: 'Karbon', helvetica, sans-serif;
                         ">support@cofinity-x.com</a>
                             or have a look at our <a
                                 href="https://intercom-help.eu/cofinity-x/en/collections/323675-portal-marketplace"
@@ -274,7 +274,7 @@
                      color: #2484C6;
                      font-weight: 400;
                      text-decoration: underline;
-                     font-family: 'Karbon';
+                     font-family: 'Karbon', helvetica, sans-serif;
                    ">Help Documentation</a>.
                         </p>
                     </td>
@@ -320,13 +320,13 @@
                                 50668 Köln <br />
                                 E-Mail: <a href="mailto:info@cofinity-x.com" style="
                 color: black;
-                font-weight: 500;
+                font-weight: bold;
                 text-decoration: underline;
                 font-family: 'Karbon', helvetica, sans-serif;
               ">info@cofinity-x.com</a> <br />
                                 Website: <a href="https://www.cofinity-x.com" style="
                 color: black;
-                font-weight: 500;
+                font-weight: bold;
                 text-decoration: underline;
                 font-family: 'Karbon', helvetica, sans-serif;
               " target="_blank">www.cofinity-x.com</a>
