--- a/src/mailing/Mailing.Template/EmailTemplates/portal_welcome_email.html
+++ b/src/mailing/Mailing.Template/EmailTemplates/portal_welcome_email.html
@@ -292,7 +292,7 @@
               More information and help:
             </p>
             <p style="
-                        font-family: 'Karbon';
+                        font-family: 'Karbon', helvetica, sans-serif;
                         margin: 0;
                         text-decoration: none;
                         font-size: 16px;
@@ -307,7 +307,7 @@
                           color: #2484C6;
                           font-weight: 400;
                           text-decoration: underline;
-                          font-family: 'Karbon';
+                          font-family: 'Karbon', helvetica, sans-serif;
                         ">support@cofinity-x.com</a>
               or have a look at our <a
                 href="https://intercom-help.eu/cofinity-x/en/collections/323675-portal-marketplace" target="_blank"
@@ -315,7 +315,7 @@
                      color: #2484C6;
                      font-weight: 400;
                      text-decoration: underline;
-                     font-family: 'Karbon';
+                     font-family: 'Karbon', helvetica, sans-serif;
                    ">Help Documentation</a>.
             </p>
           </td>
@@ -361,13 +361,13 @@
                 50668 Köln <br />
                 E-Mail: <a href="mailto:info@cofinity-x.com" style="
                 color: black;
-                font-weight: 500;
+                font-weight: bold;
                 text-decoration: underline;
                 font-family: 'Karbon', helvetica, sans-serif;
               ">info@cofinity-x.com</a> <br />
                 Website: <a href="https://www.cofinity-x.com" style="
                 color: black;
-                font-weight: 500;
+                font-weight: bold;
                 text-decoration: underline;
                 font-family: 'Karbon', helvetica, sans-serif;
               " target="_blank">www.cofinity-x.com</a>
