--- a/src/mailing/Mailing.Template/EmailTemplates/registration_declined.html
+++ b/src/mailing/Mailing.Template/EmailTemplates/registration_declined.html
@@ -256,13 +256,13 @@
                                 50668 Köln <br />
                                 E-Mail: <a href="mailto:info@cofinity-x.com" style="
                 color: black;
-                font-weight: 500;
+                font-weight: bold;
                 text-decoration: underline;
                 font-family: 'Karbon', helvetica, sans-serif;
               ">info@cofinity-x.com</a> <br />
                                 Website: <a href="https://www.cofinity-x.com" style="
                 color: black;
-                font-weight: 500;
+                font-weight: bold;
                 text-decoration: underline;
                 font-family: 'Karbon', helvetica, sans-serif;
               " target="_blank">www.cofinity-x.com</a>
