--- a/src/mailing/Mailing.Template/EmailTemplates/cx_admin_invitation.html
+++ b/src/mailing/Mailing.Template/EmailTemplates/cx_admin_invitation.html
@@ -212,7 +212,7 @@
                     text-align: left;
                     color: #333333;
                   ">
-                <b>1st:</b> Search and select your company. Your company name is <b>"{companyName}"</b>.
+                <b>1st:</b> Search and select your company. Your company name is <br/><b>“{companyName}”</b>.
               </li>
 
               <li style="
@@ -337,7 +337,7 @@
               More information and help:
             </p>
             <p style="
-                  font-family: 'Karbon';
+                  font-family: 'Karbon', helvetica, sans-serif;
                   margin: 0;
                   text-decoration: none;
                   font-size: 16px;
@@ -352,13 +352,13 @@
                     color: #2484C6;
                     font-weight: 400;
                     text-decoration: underline;
-                    font-family: 'Karbon';
+                    font-family: 'Karbon', helvetica, sans-serif;
                   ">support@cofinity-x.com</a>
                or have a look at our <a href="https://intercom-help.eu/cofinity-x/en/collections/323675-portal-marketplace" target="_blank" style="
                color: #2484C6;
                font-weight: 400;
                text-decoration: underline;
-               font-family: 'Karbon';
+               font-family: 'Karbon', helvetica, sans-serif;
              ">Help Documentation</a>. 
             </p>
           </td>
@@ -407,13 +407,13 @@
                 50668 Köln <br />
                 E-Mail: <a href="mailto:info@cofinity-x.com" style="
                 color: #333333;
-                font-weight: 500;
+                font-weight: bold;
                 text-decoration: underline;
                 font-family: 'Karbon', helvetica, sans-serif;
               ">info@cofinity-x.com</a> <br />
                 Website: <a href="https://www.cofinity-x.com" style="
                 color: #333333;
-                font-weight: 500;
+                font-weight: bold;
                 text-decoration: underline;
                 font-family: 'Karbon', helvetica, sans-serif;
               " target="_blank">www.cofinity-x.com</a>
