--- a/src/mailing/Mailing.Template/EmailTemplates/nextsteps.html
+++ b/src/mailing/Mailing.Template/EmailTemplates/nextsteps.html
@@ -241,7 +241,7 @@
                       More information and help:
                   </p>
                   <p style="
-                  font-family: 'Karbon';
+                  font-family: 'Karbon', helvetica, sans-serif;
                   margin: 0;
                   text-decoration: none;
                   font-size: 16px;
@@ -256,7 +256,7 @@
                     color: #2484C6;
                     font-weight: 400;
                     text-decoration: underline;
-                    font-family: 'Karbon';
+                    font-family: 'Karbon', helvetica, sans-serif;
                   ">support@cofinity-x.com</a>
                       or have a look at our <a
                           href="https://intercom-help.eu/cofinity-x/en/collections/323675-portal-marketplace"
@@ -264,7 +264,7 @@
                color: #2484C6;
                font-weight: 400;
                text-decoration: underline;
-               font-family: 'Karbon';
+               font-family: 'Karbon', helvetica, sans-serif;
              ">Help Documentation</a>.
                   </p>
               </td>
@@ -313,13 +313,13 @@
                 50668 Köln <br />
                 E-Mail: <a href="mailto:info@cofinity-x.com" style="
                 color: black;
-                font-weight: 500;
+                font-weight: bold;
                 text-decoration: underline;
                 font-family: 'Karbon', helvetica, sans-serif;
               ">info@cofinity-x.com</a> <br />
                 Website: <a href="https://www.cofinity-x.com" style="
                 color: black;
-                font-weight: 500;
+                font-weight: bold;
                 text-decoration: underline;
                 font-family: 'Karbon', helvetica, sans-serif;
               " target="_blank">www.cofinity-x.com</a>
