--- a/src/mailing/Mailing.Template/EmailTemplates/portal_newuser_welcome.html
+++ b/src/mailing/Mailing.Template/EmailTemplates/portal_newuser_welcome.html
@@ -226,7 +226,7 @@
                     color: #000;
                   ">
                 1st: Select your company tenant. Your company tenant is
-                <span style="color: #d31184">"{companyName}"</span>
+               <br/> <span style="color: #d31184">“{companyName}”</span>
               </li>
 
               <li style="
@@ -336,7 +336,7 @@
                             More information and help:
                         </p>
                         <p style="
-                        font-family: 'Karbon';
+                        font-family: 'Karbon', helvetica, sans-serif;
                         margin: 0;
                         text-decoration: none;
                         font-size: 16px;
@@ -351,7 +351,7 @@
                           color: #2484C6;
                           font-weight: 400;
                           text-decoration: underline;
-                          font-family: 'Karbon';
+                          font-family: 'Karbon', helvetica, sans-serif;
                         ">support@cofinity-x.com</a>
                             or have a look at our <a
                                 href="https://intercom-help.eu/cofinity-x/en/collections/323675-portal-marketplace"
@@ -359,7 +359,7 @@
                      color: #2484C6;
                      font-weight: 400;
                      text-decoration: underline;
-                     font-family: 'Karbon';
+                     font-family: 'Karbon', helvetica, sans-serif;
                    ">Help Documentation</a>.
                         </p>
                     </td>
@@ -405,13 +405,13 @@
                 50668 Köln <br />
                 E-Mail: <a href="mailto:info@cofinity-x.com" style="
                 color: black;
-                font-weight: 500;
+                font-weight: bold;
                 text-decoration: underline;
                 font-family: 'Karbon', helvetica, sans-serif;
               ">info@cofinity-x.com</a> <br />
                 Website: <a href="https://www.cofinity-x.com" style="
                 color: black;
-                font-weight: 500;
+                font-weight: bold;
                 text-decoration: underline;
                 font-family: 'Karbon', helvetica, sans-serif;
               " target="_blank">www.cofinity-x.com</a>
