fix(OSP): fixed the copy paste url (#27)

--- a/src/mailing/Mailing.Template/EmailTemplates/osp_welcome_email.html
+++ b/src/mailing/Mailing.Template/EmailTemplates/osp_welcome_email.html
@@ -400,7 +400,7 @@
                <br/>
              Or copy & paste this URL into your browser:
              <br/>
-            <span style="color: #2484C6;">{url}</span>
+            <span style="color: #2484C6;">{externalRegistrationUrl}</span>
            </p>
                     </td>
                 </tr>
