fix(subscriptionActivationEmail): CHERRY-PICK null requester name (#974) (#36)

--- a/src/mailing/Mailing.Template/EmailTemplates/serviceprovider_subscription_activation.html
+++ b/src/mailing/Mailing.Template/EmailTemplates/serviceprovider_subscription_activation.html
@@ -111,7 +111,7 @@
                                   style="Margin:0;padding-top:20px;padding-bottom:20px;padding-left:30px;padding-right:30px;text-align: left;">
                                   <p
                                     style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:arial, 'helvetica neue', helvetica, sans-serif;line-height:21px;color:#333333;font-size:14px">
-                                    Dear {offerRequesterName}, <br>your Catena-X marketplace subscription request for
+                                    Dear {offerCustomerName}, <br>your Catena-X marketplace subscription request for
                                     {offerName} got accepted and is not active.</p>
                                   <p
                                     style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:arial, 'helvetica neue', helvetica, sans-serif;line-height:21px;color:#333333;font-size:14px">
