--- a/src/mailing/Mailing.Template/EmailTemplates/delete_managed_idp.html
+++ b/src/mailing/Mailing.Template/EmailTemplates/delete_managed_idp.html
@@ -196,7 +196,7 @@
                   <p
                     style="
                       margin: 0;
-                      color: var(--Text-Text-Main, #333);
+                      color: #333;
                       font-family: 'Karbon', helvetica, sans-serif;
                       font-size: 32px;
                       font-style: normal;
@@ -219,7 +219,7 @@
                       -webkit-text-size-adjust: none;
                       -ms-text-size-adjust: none;
                       mso-line-height-rule: exactly;
-                      color: var(--Text-Text, #333);
+                      color: #333;
                       font-family: 'Karbon', helvetica, sans-serif;
                       font-size: 18px;
                       font-style: normal;
@@ -235,7 +235,7 @@
                       -webkit-text-size-adjust: none;
                       -ms-text-size-adjust: none;
                       mso-line-height-rule: exactly;
-                      color: var(--Text-Text, #333);
+                      color: #333;
                       font-family: 'Karbon', helvetica, sans-serif;
                       font-size: 18px;
                       font-style: normal;
@@ -256,7 +256,7 @@
                         style="
                           margin: 0;
                           padding-top: 16px;
-                          color: var(--Text-Text, #333);
+                          color: #333;
 
                           font-family: 'Karbon', helvetica, sans-serif;
                           font-size: 18px;
@@ -270,7 +270,7 @@
                       <p
                         style="
                           margin: 0;
-                          color: var(--Text-Text, #333);
+                          color: #333;
 
                           font-family: 'Karbon', helvetica, sans-serif;
                           font-size: 18px;
@@ -288,7 +288,7 @@
                         style="
                           margin: 0;
                           padding-top: 16px;
-                          color: var(--Text-Text, #333);
+                          color: #333;
 
                           font-family: 'Karbon', helvetica, sans-serif;
                           font-size: 18px;
@@ -302,7 +302,7 @@
                       <p
                         style="
                           margin: 0;
-                          color: var(--Text-Text, #333);
+                          color: #333;
 
                           font-family: 'Karbon', helvetica, sans-serif;
                           font-size: 18px;
@@ -325,7 +325,7 @@
                   <p
                     style="
                       margin: 0px;
-                      color: var(--Text-Text, #333);
+                      color: #333;
 
                       font-family: 'Karbon', helvetica, sans-serif;
                       font-size: 18px;
@@ -337,7 +337,7 @@
                     For any additional support, feel free to contact us at
                     <a
                       style="
-                        color: var(--Text-Link, #2484c6);
+                        color:  #2484c6;
                         font-family: 'Karbon', helvetica, sans-serif;
                         font-size: 18px;
                         font-style: normal;
@@ -353,7 +353,7 @@
                     style="
                       margin: 0px;
                       padding-top: 40px;
-                      color: var(--Text-Text, #333);
+                      color: #333;
                       font-family: 'Karbon', helvetica, sans-serif;
                       font-size: 18px;
                       font-style: normal;
@@ -384,7 +384,7 @@
               margin: 0;
               padding: 40px;
               text-align: left;
-              background: var(--Primary-Light-gray, #fafafa);
+              background: #fafafa;
               box-shadow: 0px 4px 12px 0px rgba(0, 0, 0, 0.1);
               border-radius: 0px 10px 10px 0px;
             "
