--- a/src/mailing/Mailing.Template/EmailTemplates/serviceactivation_offer_release_approval.html
+++ b/src/mailing/Mailing.Template/EmailTemplates/serviceactivation_offer_release_approval.html
@@ -196,7 +196,7 @@
                   <p
                     style="
                       margin: 0;
-                      color: var(--Text-Text-Main, #333);
+                      color: #333;
                       font-family: 'Karbon', helvetica, sans-serif;
                       font-size: 32px;
                       font-style: normal;
@@ -233,7 +233,7 @@
                       -webkit-text-size-adjust: none;
                       -ms-text-size-adjust: none;
                       mso-line-height-rule: exactly;
-                      color: var(--Text-Text, #333);
+                      color: #333;
 
                       font-family: 'Karbon', helvetica, sans-serif;
                       font-size: 18px;
@@ -250,7 +250,7 @@
                       -webkit-text-size-adjust: none;
                       -ms-text-size-adjust: none;
                       mso-line-height-rule: exactly;
-                      color: var(--Text-Text, #333);
+                      color: #333;
                       font-family: 'Karbon', helvetica, sans-serif;
                       font-size: 18px;
                       font-style: normal;
@@ -276,8 +276,8 @@
                     style="
                       display: inline-block;
                       border-radius: 10px;
-                      border: 2px solid var(--Buttons-Primary, #d31184);
-                      background: var(--Buttons-Primary, #d31184);
+                      border: 2px solid #d31184;
+                      background: #d31184;
                       width: auto;
                       mso-hide: all;
                     "
@@ -295,7 +295,7 @@
                         mso-line-height-rule: exactly;
                         color: #ffffff;
                         border-radius: 10px;
-                        background: var(--Buttons-Primary, #d31184);
+                        background: #d31184;
                         display: inline-block;
                         font-family: 'Karbon', helvetica, sans-serif;
                         font-size: 20px;
@@ -317,7 +317,7 @@
                   <p
                     style="
                       margin: 0px;
-                      color: var(--Text-Text, #333);
+                      color: #333;
 
                       font-family: 'Karbon', helvetica, sans-serif;
                       font-size: 12px;
@@ -330,7 +330,7 @@
                     <a
                       style="
                         text-decoration-line: underline;
-                        color: var(--Text-Link, #2484c6);
+                        color:  #2484c6;
                       "
                       href="{offerDetailUrl}"
                       >{offerDetailUrl}</a
@@ -343,7 +343,7 @@
                   <p
                     style="
                       margin: 0px;
-                      color: var(--Text-Text, #333);
+                      color: #333;
                       font-family: 'Karbon', helvetica, sans-serif;
                       font-size: 18px;
                       font-style: normal;
@@ -355,7 +355,7 @@
                     requests and can view these on your
                     <a
                       style="
-                        color: var(--Text-Link, #2484c6);
+                        color:  #2484c6;
                         text-decoration-line: underline;
                       "
                       href="{offerSubscriptionUrl}"
@@ -367,7 +367,7 @@
                     style="
                       margin: 0px;
                       margin-top: 40px;
-                      color: var(--Text-Text, #333);
+                      color: #333;
                       font-family: 'Karbon', helvetica, sans-serif;
                       font-size: 18px;
                       font-style: normal;
@@ -381,7 +381,7 @@
                     style="
                       margin: 0px;
                       margin-top: 40px;
-                      color: var(--Text-Text, #333);
+                      color: #333;
                       font-family: 'Karbon', helvetica, sans-serif;
                       font-size: 20px;
                       font-style: normal;
@@ -395,7 +395,7 @@
                     style="
                       margin: 0px;
                       margin-top: 16px;
-                      color: var(--Text-Text, #333);
+                      color: #333;
                       font-family: 'Karbon', helvetica, sans-serif;
                       font-size: 16px;
                       font-style: normal;
@@ -408,7 +408,7 @@
                   <p
                     style="
                       margin: 0px;
-                      color: var(--Text-Text, #333);
+                      color: #333;
                       font-family: 'Karbon', helvetica, sans-serif;
                       font-size: 16px;
                       font-style: normal;
@@ -419,7 +419,7 @@
                     Contact us via
                     <a
                       style="
-                        color: var(--Text-Link, #2484c6);
+                        color:  #2484c6;
                         font-family: 'Karbon', helvetica, sans-serif;
                         font-size: 16px;
                         font-style: normal;
@@ -433,7 +433,7 @@
                     or have a look at our
                     <a
                       style="
-                        color: var(--Text-Link, #2484c6);
+                        color:  #2484c6;
                         font-family: 'Karbon', helvetica, sans-serif;
                         font-size: 16px;
                         font-style: normal;
@@ -464,7 +464,7 @@
               margin: 0;
               padding: 40px;
               text-align: left;
-              background: var(--Primary-Light-gray, #fafafa);
+              background: #fafafa;
               box-shadow: 0px 4px 12px 0px rgba(0, 0, 0, 0.1);
               border-radius: 0px 10px 10px 0px;
             "
