--- a/src/mailing/Mailing.Template/EmailTemplates/deactivate_managed_idp.html
+++ b/src/mailing/Mailing.Template/EmailTemplates/deactivate_managed_idp.html
@@ -196,7 +196,7 @@
                   <p
                     style="
                       margin: 0;
-                      color: var(--Text-Text-Main, #333);
+                      color: #333;
                       font-family: 'Karbon', helvetica, sans-serif;
 
                       font-size: 32px;
@@ -220,7 +220,7 @@
                       -webkit-text-size-adjust: none;
                       -ms-text-size-adjust: none;
                       mso-line-height-rule: exactly;
-                      color: var(--Text-Text, #333);
+                      color: #333;
                       font-family: 'Karbon', helvetica, sans-serif;
 
                       font-size: 18px;
@@ -237,7 +237,7 @@
                       -webkit-text-size-adjust: none;
                       -ms-text-size-adjust: none;
                       mso-line-height-rule: exactly;
-                      color: var(--Text-Text, #333);
+                      color: #333;
                       font-family: 'Karbon', helvetica, sans-serif;
 
                       font-size: 18px;
@@ -259,7 +259,7 @@
                         style="
                           margin: 0;
                           padding-top: 16px;
-                          color: var(--Text-Text, #333);
+                          color: #333;
 
                           font-family: 'Karbon', helvetica, sans-serif;
 
@@ -274,7 +274,7 @@
                       <p
                         style="
                           margin: 0;
-                          color: var(--Text-Text, #333);
+                          color: #333;
 
                           font-family: 'Karbon', helvetica, sans-serif;
 
@@ -293,7 +293,7 @@
                         style="
                           margin: 0;
                           padding-top: 16px;
-                          color: var(--Text-Text, #333);
+                          color: #333;
 
                           font-family: 'Karbon', helvetica, sans-serif;
 
@@ -308,7 +308,7 @@
                       <p
                         style="
                           margin: 0;
-                          color: var(--Text-Text, #333);
+                          color: #333;
 
                           font-family: 'Karbon', helvetica, sans-serif;
 
@@ -332,7 +332,7 @@
                   <p
                     style="
                       margin: 0px;
-                      color: var(--Text-Text, #333);
+                      color: #333;
 
                       font-family: 'Karbon', helvetica, sans-serif;
 
@@ -345,7 +345,7 @@
                     For any additional support, feel free to contact us at
                     <a
                       style="
-                        color: var(--Text-Link, #2484c6);
+                        color:  #2484c6;
                         font-family: 'Karbon', helvetica, sans-serif;
 
                         font-size: 18px;
@@ -362,7 +362,7 @@
                     style="
                       margin: 0px;
                       padding-top: 40px;
-                      color: var(--Text-Text, #333);
+                      color: #333;
                       font-family: 'Karbon', helvetica, sans-serif;
 
                       font-size: 18px;
@@ -394,7 +394,7 @@
               margin: 0;
               padding: 40px;
               text-align: left;
-              background: var(--Primary-Light-gray, #fafafa);
+              background: #fafafa;
               box-shadow: 0px 4px 12px 0px rgba(0, 0, 0, 0.1);
               border-radius: 0px 10px 10px 0px;
             "
