--- a/src/mailing/Mailing.Template/EmailTemplates/decline_registration.html
+++ b/src/mailing/Mailing.Template/EmailTemplates/decline_registration.html
@@ -197,7 +197,7 @@
                   <p
                     style="
                       margin: 0;
-                      color: var(--Text-Text-Main, #333);
+                      color: #333;
                       font-family: 'Karbon', helvetica, sans-serif;
                       font-size: 32px;
                       font-style: normal;
@@ -235,7 +235,7 @@
                       -webkit-text-size-adjust: none;
                       -ms-text-size-adjust: none;
                       mso-line-height-rule: exactly;
-                      color: var(--Text-Text, #333);
+                      color: #333;
                       font-family: 'Karbon', helvetica, sans-serif;
                       font-size: 18px;
                       font-style: normal;
@@ -251,7 +251,7 @@
                       -webkit-text-size-adjust: none;
                       -ms-text-size-adjust: none;
                       mso-line-height-rule: exactly;
-                      color: var(--Text-Text, #333);
+                      color: #333;
                       font-family: 'Karbon', helvetica, sans-serif;
                       font-size: 18px;
                       font-style: normal;
@@ -271,7 +271,7 @@
                   <p
                     style="
                       margin: 0px;
-                      color: var(--Text-Text, #333);
+                      color: #333;
                       font-family: 'Karbon', helvetica, sans-serif;
                       font-size: 18px;
                       font-style: normal;
@@ -283,7 +283,7 @@
                     you. Please reach out to us at
                     <a
                       style="
-                        color: var(--Text-Link, #2484c6);
+                        color:  #2484c6;
                         text-decoration-line: underline;
                       "
                       href="mailto:support@cofinity-x.com"
@@ -295,7 +295,7 @@
                     style="
                       margin: 0px;
                       margin-top: 40px;
-                      color: var(--Text-Text, #333);
+                      color: #333;
                       font-family: 'Karbon', helvetica, sans-serif;
                       font-size: 18px;
                       font-style: normal;
@@ -324,7 +324,7 @@
               margin: 0;
               padding: 40px;
               text-align: left;
-              background: var(--Primary-Light-gray, #fafafa);
+              background: #fafafa;
               box-shadow: 0px 4px 12px 0px rgba(0, 0, 0, 0.1);
               border-radius: 0px 10px 10px 0px;
             "
