--- a/src/mailing/Mailing.Template/EmailTemplates/new_user_account_external_idp.html
+++ b/src/mailing/Mailing.Template/EmailTemplates/new_user_account_external_idp.html
@@ -196,7 +196,7 @@
                   <p
                     style="
                       margin: 0;
-                      color: var(--Text-Text-Main, #333);
+                      color: #333;
                       font-family: 'Karbon', helvetica, sans-serif;
                       font-size: 32px;
                       font-style: normal;
@@ -233,7 +233,7 @@
                       -webkit-text-size-adjust: none;
                       -ms-text-size-adjust: none;
                       mso-line-height-rule: exactly;
-                      color: var(--Text-Text, #333);
+                      color: #333;
                       font-family: 'Karbon', helvetica, sans-serif;
                       font-size: 18px;
                       font-style: normal;
@@ -247,7 +247,7 @@
                   </p>
                   <p
                     style="
-                      color: var(--Text-Text, #333);
+                      color: #333;
                       font-family: 'Karbon', helvetica, sans-serif;
                       font-size: 20px;
                       font-style: normal;
@@ -264,7 +264,7 @@
                       <p
                         style="
                           margin: 0;
-                          color: var(--Text-Text, #333);
+                          color: #333;
 
                           font-family: 'Karbon', helvetica, sans-serif;
                           font-size: 18px;
@@ -280,7 +280,7 @@
                       <p
                         style="
                           margin: 0;
-                          color: var(--Text-Text, #333);
+                          color: #333;
                           font-family: 'Karbon', helvetica, sans-serif;
                           font-size: 18px;
                           font-style: normal;
@@ -295,7 +295,7 @@
                       <p
                         style="
                           margin: 0;
-                          color: var(--Text-Text, #333);
+                          color: #333;
                           font-family: 'Karbon', helvetica, sans-serif;
                           font-size: 18px;
                           font-style: normal;
@@ -318,8 +318,8 @@
                     style="
                       display: inline-block;
                       border-radius: 10px;
-                      border: 2px solid var(--Buttons-Primary, #d31184);
-                      background: var(--Buttons-Primary, #d31184);
+                      border: 2px solid #d31184;
+                      background: #d31184;
                       width: auto;
                       mso-hide: all;
                     "
@@ -337,7 +337,7 @@
                         mso-line-height-rule: exactly;
                         color: #ffffff;
                         border-radius: 10px;
-                        background: var(--Buttons-Primary, #d31184);
+                        background: #d31184;
                         display: inline-block;
                         font-family: 'Karbon', helvetica, sans-serif;
                         font-size: 20px;
@@ -359,7 +359,7 @@
                   <p
                     style="
                       margin: 0px;
-                      color: var(--Text-Text, #333);
+                      color: #333;
 
                       font-family: 'Karbon', helvetica, sans-serif;
                       font-size: 12px;
@@ -372,7 +372,7 @@
                     <a
                       style="
                         text-decoration-line: underline;
-                        color: var(--Text-Link, #2484c6);
+                        color:  #2484c6;
                       "
                       href="{url}"
                       >{url}</a
@@ -385,7 +385,7 @@
                   <p
                     style="
                       margin: 0px;
-                      color: var(--Text-Text, #333);
+                      color: #333;
                       font-family: 'Karbon', helvetica, sans-serif;
                       font-size: 18px;
                       font-style: normal;
@@ -396,7 +396,7 @@
                     Once assigned, the app will appear in the
                     <a
                       style="
-                        color: var(--Text-Link, #2484c6);
+                        color:  #2484c6;
                         text-decoration-line: underline;
                       "
                       href="{url}"
@@ -409,7 +409,7 @@
                     style="
                       margin: 0px;
                       margin-top: 40px;
-                      color: var(--Text-Text, #333);
+                      color: #333;
                       font-family: 'Karbon', helvetica, sans-serif;
                       font-size: 18px;
                       font-style: normal;
@@ -423,7 +423,7 @@
                     style="
                       margin: 0px;
                       margin-top: 40px;
-                      color: var(--Text-Text, #333);
+                      color: #333;
                       font-family: 'Karbon', helvetica, sans-serif;
                       font-size: 20px;
                       font-style: normal;
@@ -437,7 +437,7 @@
                     style="
                       margin: 0px;
                       margin-top: 16px;
-                      color: var(--Text-Text, #333);
+                      color: #333;
                       font-family: 'Karbon', helvetica, sans-serif;
                       font-size: 16px;
                       font-style: normal;
@@ -450,7 +450,7 @@
                   <p
                     style="
                       margin: 0px;
-                      color: var(--Text-Text, #333);
+                      color: #333;
                       font-family: 'Karbon', helvetica, sans-serif;
                       font-size: 16px;
                       font-style: normal;
@@ -461,7 +461,7 @@
                     Contact us via
                     <a
                       style="
-                        color: var(--Text-Link, #2484c6);
+                        color:  #2484c6;
                         font-family: 'Karbon', helvetica, sans-serif;
                         font-size: 16px;
                         font-style: normal;
@@ -475,7 +475,7 @@
                     or have a look at our
                     <a
                       style="
-                        color: var(--Text-Link, #2484c6);
+                        color:  #2484c6;
                         font-family: 'Karbon', helvetica, sans-serif;
                         font-size: 16px;
                         font-style: normal;
@@ -508,7 +508,7 @@
               margin: 0;
               padding: 40px;
               text-align: left;
-              background: var(--Primary-Light-gray, #fafafa);
+              background: #fafafa;
               box-shadow: 0px 4px 12px 0px rgba(0, 0, 0, 0.1);
               border-radius: 0px 10px 10px 0px;
             "
