--- a/src/mailing/Mailing.Template/EmailTemplates/portal_newuser_welcome.html
+++ b/src/mailing/Mailing.Template/EmailTemplates/portal_newuser_welcome.html
@@ -197,7 +197,7 @@
                   <p
                     style="
                       margin: 0;
-                      color: var(--Text-Text-Main, #333);
+                      color: #333;
                       font-family: 'Karbon', helvetica, sans-serif;
                       font-size: 32px;
                       font-style: normal;
@@ -234,7 +234,7 @@
                       -webkit-text-size-adjust: none;
                       -ms-text-size-adjust: none;
                       mso-line-height-rule: exactly;
-                      color: var(--Text-Text, #333);
+                      color: #333;
                       font-family: 'Karbon', helvetica, sans-serif;
                       font-size: 18px;
                       font-style: normal;
@@ -248,7 +248,7 @@
                   </p>
                   <p
                     style="
-                      color: var(--Text-Text, #333);
+                      color: #333;
                       font-family: 'Karbon', helvetica, sans-serif;
                       font-size: 20px;
                       font-style: normal;
@@ -265,7 +265,7 @@
                       <p
                         style="
                           margin: 0;
-                          color: var(--Text-Text, #333);
+                          color: #333;
 
                           font-family: 'Karbon', helvetica, sans-serif;
                           font-size: 18px;
@@ -281,7 +281,7 @@
                       <p
                         style="
                           margin: 0;
-                          color: var(--Text-Text, #333);
+                          color: #333;
                           font-family: 'Karbon', helvetica, sans-serif;
                           font-size: 18px;
                           font-style: normal;
@@ -297,7 +297,7 @@
                       <p
                         style="
                           margin: 0;
-                          color: var(--Text-Text, #333);
+                          color: #333;
                           font-family: 'Karbon', helvetica, sans-serif;
                           font-size: 18px;
                           font-style: normal;
@@ -313,7 +313,7 @@
                       <p
                         style="
                           margin: 0;
-                          color: var(--Text-Text, #333);
+                          color: #333;
                           font-family: 'Karbon', helvetica, sans-serif;
                           font-size: 18px;
                           font-style: normal;
@@ -339,8 +339,8 @@
                     style="
                       display: inline-block;
                       border-radius: 10px;
-                      border: 2px solid var(--Buttons-Primary, #d31184);
-                      background: var(--Buttons-Primary, #d31184);
+                      border: 2px solid #d31184;
+                      background: #d31184;
                       width: auto;
                       mso-hide: all;
                     "
@@ -358,7 +358,7 @@
                         mso-line-height-rule: exactly;
                         color: #ffffff;
                         border-radius: 10px;
-                        background: var(--Buttons-Primary, #d31184);
+                        background: #d31184;
                         display: inline-block;
                         font-family: 'Karbon', helvetica, sans-serif;
                         font-size: 20px;
@@ -380,7 +380,7 @@
                   <p
                     style="
                       margin: 0px;
-                      color: var(--Text-Text, #333);
+                      color: #333;
 
                       font-family: 'Karbon', helvetica, sans-serif;
                       font-size: 12px;
@@ -393,7 +393,7 @@
                     <a
                       style="
                         text-decoration-line: underline;
-                        color: var(--Text-Link, #2484c6);
+                        color:  #2484c6;
                       "
                       href="{url}"
                       >{url}</a
@@ -406,7 +406,7 @@
                   <p
                     style="
                       margin: 0px;
-                      color: var(--Text-Text, #333);
+                      color: #333;
                       font-family: 'Karbon', helvetica, sans-serif;
                       font-size: 18px;
                       font-style: normal;
@@ -420,7 +420,7 @@
                     style="
                       margin: 0px;
                       margin-top: 40px;
-                      color: var(--Text-Text, #333);
+                      color: #333;
                       font-family: 'Karbon', helvetica, sans-serif;
                       font-size: 20px;
                       font-style: normal;
@@ -434,7 +434,7 @@
                     style="
                       margin: 0px;
                       margin-top: 16px;
-                      color: var(--Text-Text, #333);
+                      color: #333;
                       font-family: 'Karbon', helvetica, sans-serif;
                       font-size: 16px;
                       font-style: normal;
@@ -447,7 +447,7 @@
                   <p
                     style="
                       margin: 0px;
-                      color: var(--Text-Text, #333);
+                      color: #333;
                       font-family: 'Karbon', helvetica, sans-serif;
                       font-size: 16px;
                       font-style: normal;
@@ -458,7 +458,7 @@
                     Contact us via
                     <a
                       style="
-                        color: var(--Text-Link, #2484c6);
+                        color:  #2484c6;
                         font-family: 'Karbon', helvetica, sans-serif;
                         font-size: 16px;
                         font-style: normal;
@@ -472,7 +472,7 @@
                     or have a look at our
                     <a
                       style="
-                        color: var(--Text-Link, #2484c6);
+                        color:  #2484c6;
                         font-family: 'Karbon', helvetica, sans-serif;
                         font-size: 16px;
                         font-style: normal;
@@ -505,7 +505,7 @@
               margin: 0;
               padding: 40px;
               text-align: left;
-              background: var(--Primary-Light-gray, #fafafa);
+              background: #fafafa;
               box-shadow: 0px 4px 12px 0px rgba(0, 0, 0, 0.1);
               border-radius: 0px 10px 10px 0px;
             "
