--- a/src/mailing/Mailing.Template/EmailTemplates/service_request_decline.html
+++ b/src/mailing/Mailing.Template/EmailTemplates/service_request_decline.html
@@ -196,7 +196,7 @@
                   <p
                     style="
                       margin: 0;
-                      color: var(--Text-Text-Main, #333);
+                      color: #333;
                       font-family: 'Karbon', helvetica, sans-serif;
                       font-size: 32px;
                       font-style: normal;
@@ -219,7 +219,7 @@
                       -webkit-text-size-adjust: none;
                       -ms-text-size-adjust: none;
                       mso-line-height-rule: exactly;
-                      color: var(--Text-Text, #333);
+                      color: #333;
 
                       font-family: 'Karbon', helvetica, sans-serif;
                       font-size: 18px;
@@ -236,7 +236,7 @@
                       -webkit-text-size-adjust: none;
                       -ms-text-size-adjust: none;
                       mso-line-height-rule: exactly;
-                      color: var(--Text-Text, #333);
+                      color: #333;
                       font-family: 'Karbon', helvetica, sans-serif;
                       font-size: 18px;
                       font-style: normal;
@@ -255,7 +255,7 @@
                       -webkit-text-size-adjust: none;
                       -ms-text-size-adjust: none;
                       mso-line-height-rule: exactly;
-                      color: var(--Text-Text, #333);
+                      color: #333;
                       font-family: 'Karbon', helvetica, sans-serif;
                       font-size: 18px;
                       font-style: normal;
@@ -277,8 +277,8 @@
                     style="
                       display: inline-block;
                       border-radius: 10px;
-                      border: 2px solid var(--Buttons-Primary, #d31184);
-                      background: var(--Buttons-Primary, #d31184);
+                      border: 2px solid #d31184;
+                      background: #d31184;
                       width: auto;
                       mso-hide: all;
                     "
@@ -296,7 +296,7 @@
                         mso-line-height-rule: exactly;
                         color: #ffffff;
                         border-radius: 10px;
-                        background: var(--Buttons-Primary, #d31184);
+                        background: #d31184;
                         display: inline-block;
                         font-family: 'Karbon', helvetica, sans-serif;
                         font-size: 20px;
@@ -318,7 +318,7 @@
                   <p
                     style="
                       margin: 0px;
-                      color: var(--Text-Text, #333);
+                      color: #333;
 
                       font-family: 'Karbon', helvetica, sans-serif;
                       font-size: 12px;
@@ -331,7 +331,7 @@
                     <a
                       style="
                         text-decoration-line: underline;
-                        color: var(--Text-Link, #2484c6);
+                        color:  #2484c6;
                       "
                       href="{url}"
                       >{url}</a
@@ -344,7 +344,7 @@
                   <p
                     style="
                       margin: 0;
-                      color: var(--Text-Text, #333);
+                      color: #333;
                       font-family: 'Karbon', helvetica, sans-serif;
                       font-size: 18px;
                       font-style: normal;
@@ -356,7 +356,7 @@
                     you. Please reach out to us at
                     <a
                       style="
-                        color: var(--Text-Link, #2484c6);
+                        color:  #2484c6;
                         text-decoration-line: underline;
                       "
                       href="mailto:support@cofinity-x.com"
@@ -368,7 +368,7 @@
                     style="
                       margin: 0px;
                       margin-top: 40px;
-                      color: var(--Text-Text, #333);
+                      color: #333;
                       font-family: 'Karbon', helvetica, sans-serif;
                       font-size: 18px;
                       font-style: normal;
@@ -400,7 +400,7 @@
               margin: 0;
               padding: 40px;
               text-align: left;
-              background: var(--Primary-Light-gray, #fafafa);
+              background: #fafafa;
               box-shadow: 0px 4px 12px 0px rgba(0, 0, 0, 0.1);
               border-radius: 0px 10px 10px 0px;
             "
