--- a/src/mailing/Mailing.Template/EmailTemplates/serviceprovider_subscription_activation.html
+++ b/src/mailing/Mailing.Template/EmailTemplates/serviceprovider_subscription_activation.html
@@ -196,7 +196,7 @@
                   <p
                     style="
                       margin: 0;
-                      color: var(--Text-Text-Main, #333);
+                      color: #333;
                       font-family: 'Karbon', helvetica, sans-serif;
                       font-size: 32px;
                       font-style: normal;
@@ -233,7 +233,7 @@
                       -webkit-text-size-adjust: none;
                       -ms-text-size-adjust: none;
                       mso-line-height-rule: exactly;
-                      color: var(--Text-Text, #333);
+                      color: #333;
 
                       font-family: 'Karbon', helvetica, sans-serif;
                       font-size: 18px;
@@ -250,7 +250,7 @@
                       -webkit-text-size-adjust: none;
                       -ms-text-size-adjust: none;
                       mso-line-height-rule: exactly;
-                      color: var(--Text-Text, #333);
+                      color: #333;
                       font-family: 'Karbon', helvetica, sans-serif;
                       font-size: 18px;
                       font-style: normal;
@@ -273,7 +273,7 @@
                   <p
                     style="
                       margin: 0px;
-                      color: var(--Text-Text, #333);
+                      color: #333;
                       font-family: 'Karbon', helvetica, sans-serif;
                       font-size: 18px;
                       font-style: normal;
@@ -287,7 +287,7 @@
                     style="
                       margin: 0px;
                       margin-top: 40px;
-                      color: var(--Text-Text, #333);
+                      color: #333;
                       font-family: 'Karbon', helvetica, sans-serif;
                       font-size: 20px;
                       font-style: normal;
@@ -301,7 +301,7 @@
                     style="
                       margin: 0px;
                       margin-top: 16px;
-                      color: var(--Text-Text, #333);
+                      color: #333;
                       font-family: 'Karbon', helvetica, sans-serif;
                       font-size: 16px;
                       font-style: normal;
@@ -314,7 +314,7 @@
                   <p
                     style="
                       margin: 0px;
-                      color: var(--Text-Text, #333);
+                      color: #333;
                       font-family: 'Karbon', helvetica, sans-serif;
                       font-size: 16px;
                       font-style: normal;
@@ -325,7 +325,7 @@
                     Contact us via
                     <a
                       style="
-                        color: var(--Text-Link, #2484c6);
+                        color:  #2484c6;
                         font-family: 'Karbon', helvetica, sans-serif;
                         font-size: 16px;
                         font-style: normal;
@@ -339,7 +339,7 @@
                     or have a look at our
                     <a
                       style="
-                        color: var(--Text-Link, #2484c6);
+                        color:  #2484c6;
                         font-family: 'Karbon', helvetica, sans-serif;
                         font-size: 16px;
                         font-style: normal;
@@ -371,7 +371,7 @@
               margin: 0;
               padding: 40px;
               text-align: left;
-              background: var(--Primary-Light-gray, #fafafa);
+              background: #fafafa;
               box-shadow: 0px 4px 12px 0px rgba(0, 0, 0, 0.1);
               border-radius: 0px 10px 10px 0px;
             "
