--- a/src/mailing/Mailing.Template/EmailTemplates/serviceprovider_subscription_request.html
+++ b/src/mailing/Mailing.Template/EmailTemplates/serviceprovider_subscription_request.html
@@ -196,7 +196,7 @@
                   <p
                     style="
                       margin: 0;
-                      color: var(--Text-Text-Main, #333);
+                      color: #333;
                       font-family: 'Karbon', helvetica, sans-serif;
                       font-size: 32px;
                       font-style: normal;
@@ -233,7 +233,7 @@
                       -webkit-text-size-adjust: none;
                       -ms-text-size-adjust: none;
                       mso-line-height-rule: exactly;
-                      color: var(--Text-Text, #333);
+                      color: #333;
 
                       font-family: 'Karbon', helvetica, sans-serif;
                       font-size: 18px;
@@ -250,7 +250,7 @@
                       -webkit-text-size-adjust: none;
                       -ms-text-size-adjust: none;
                       mso-line-height-rule: exactly;
-                      color: var(--Text-Text, #333);
+                      color: #333;
                       font-family: 'Karbon', helvetica, sans-serif;
                       font-size: 18px;
                       font-style: normal;
@@ -275,8 +275,8 @@
                     style="
                       display: inline-block;
                       border-radius: 10px;
-                      border: 2px solid var(--Buttons-Primary, #d31184);
-                      background: var(--Buttons-Primary, #d31184);
+                      border: 2px solid #d31184;
+                      background: #d31184;
                       width: auto;
                       mso-hide: all;
                     "
@@ -294,7 +294,7 @@
                         mso-line-height-rule: exactly;
                         color: #ffffff;
                         border-radius: 10px;
-                        background: var(--Buttons-Primary, #d31184);
+                        background: #d31184;
                         display: inline-block;
                         font-family: 'Karbon', helvetica, sans-serif;
                         font-size: 20px;
@@ -316,7 +316,7 @@
                   <p
                     style="
                       margin: 0px;
-                      color: var(--Text-Text, #333);
+                      color: #333;
 
                       font-family: 'Karbon', helvetica, sans-serif;
                       font-size: 12px;
@@ -329,7 +329,7 @@
                     <a
                       style="
                         text-decoration-line: underline;
-                        color: var(--Text-Link, #2484c6);
+                        color:  #2484c6;
                       "
                       href="{url}"
                       >{url}</a
@@ -342,7 +342,7 @@
                   <p
                     style="
                       margin: 0px;
-                      color: var(--Text-Text, #333);
+                      color: #333;
                       font-family: 'Karbon', helvetica, sans-serif;
                       font-size: 18px;
                       font-style: normal;
@@ -356,7 +356,7 @@
                     style="
                       margin: 0px;
                       margin-top: 40px;
-                      color: var(--Text-Text, #333);
+                      color: #333;
                       font-family: 'Karbon', helvetica, sans-serif;
                       font-size: 20px;
                       font-style: normal;
@@ -370,7 +370,7 @@
                     style="
                       margin: 0px;
                       margin-top: 16px;
-                      color: var(--Text-Text, #333);
+                      color: #333;
                       font-family: 'Karbon', helvetica, sans-serif;
                       font-size: 16px;
                       font-style: normal;
@@ -383,7 +383,7 @@
                   <p
                     style="
                       margin: 0px;
-                      color: var(--Text-Text, #333);
+                      color: #333;
                       font-family: 'Karbon', helvetica, sans-serif;
                       font-size: 16px;
                       font-style: normal;
@@ -394,7 +394,7 @@
                     Contact us via
                     <a
                       style="
-                        color: var(--Text-Link, #2484c6);
+                        color:  #2484c6;
                         font-family: 'Karbon', helvetica, sans-serif;
                         font-size: 16px;
                         font-style: normal;
@@ -408,7 +408,7 @@
                     or have a look at our
                     <a
                       style="
-                        color: var(--Text-Link, #2484c6);
+                        color:  #2484c6;
                         font-family: 'Karbon', helvetica, sans-serif;
                         font-size: 16px;
                         font-style: normal;
@@ -439,7 +439,7 @@
               margin: 0;
               padding: 40px;
               text-align: left;
-              background: var(--Primary-Light-gray, #fafafa);
+              background: #fafafa;
               box-shadow: 0px 4px 12px 0px rgba(0, 0, 0, 0.1);
               border-radius: 0px 10px 10px 0px;
             "
