fix: update template with correct content (#92)

--- a/src/mailing/Mailing.Template/EmailTemplates/new_user_account_external_idp.html
+++ b/src/mailing/Mailing.Template/EmailTemplates/new_user_account_external_idp.html
@@ -16,7 +16,6 @@
 -
 - SPDX-License-Identifier: Apache-2.0
 -->
-
 <!DOCTYPE html>
 <html lang="en" xml:lang="en">
   <head>
@@ -24,8 +23,10 @@
     <meta content="width=device-width, initial-scale=1" name="viewport" />
     <meta name="x-apple-disable-message-reformatting" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta http-equiv="Content-Type" content="text/html" />
     <meta content="telephone=no" name="format-detection" />
-    <title>Welcome to Cofinity-X</title>
+    <title>Welcome Message Portal Access</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <style type="text/css">
       @media only screen and (max-width: 600px) {
         .email-template-header table .cofinity-title {
@@ -204,7 +205,7 @@
                       line-height: 110%;
                     "
                   >
-                    <strong>Identity provider (IdP) deactivated</strong>
+                    <strong>Welcome to Cofinity-X</strong>
                   </p>
                   <p
                     style="
@@ -288,7 +289,8 @@
                           line-height: 140%;
                         "
                       >
-                        Select your tenant: <strong>{idpAlias}</strong>
+                        Select your tenant:
+                        <strong>{idpAlias}</strong>
                       </p>
                     </li>
                     <li>
@@ -303,7 +305,7 @@
                           line-height: 140%;
                         "
                       >
-                        Log in using your organization's single sign-on (SSO)
+                      Log in using your organization's single sign-on (SSO)
                       </p>
                     </li>
                   </ol>
@@ -385,30 +387,6 @@
                   <p
                     style="
                       margin: 0px;
-                      color: #333;
-                      font-family: 'Karbon', helvetica, sans-serif;
-                      font-size: 18px;
-                      font-style: normal;
-                      font-weight: 400;
-                      line-height: 140%;
-                    "
-                  >
-                    Once assigned, the app will appear in the
-                    <a
-                      style="
-                        color:  #2484c6;
-                        text-decoration-line: underline;
-                      "
-                      href="{url}"
-                      >Your Accessible Apps</a
-                    >
-                    section on the Portal Homepage, allowing direct access with
-                    a single click.
-                  </p>
-                  <p
-                    style="
-                      margin: 0px;
-                      margin-top: 40px;
                       color: #333;
                       font-family: 'Karbon', helvetica, sans-serif;
                       font-size: 18px;
